Newewst version with Wolf AI

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <script src='js/phaser.min.js'></script>
     <script src='js/helpers.js'></script>
     <script src='js/player.js'></script>
+    <script src='js/sees_livings.js'></script>
     <script src='js/AI.js'></script>
     <script src='js/is_walker.js'></script>
     <script src='js/is_intelligent.js'></script>
     <script src='js/living.js'></script>
-    <script src='js/enemy.js'></script>
+    <script src='js/chicken.js'></script>
     <script src='js/wolf.js'></script>
     <script src='js/game.js'></script>
   </body>
